# jobpilot-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  celery_app.py  config.py  main.py
app/agents/: __init__.py  chat_agent.py  edit_proposal_agent.py  filter_agent.py  graph.py  learning_agent.py  proposal_agent.py  scoring_agent.py
app/db/: models.py  schema.sql  session.py
app/llm/: errors.py  provider.py
app/memory/: qdrant_store.py
app/schemas/: __init__.py  agent_state.py  job.py
app/scrapers/: __init__.py  base.py  fl_ru.py  generic.py  kwork.py  registry.py  upwork.py
app/services/: __init__.py  edit_preference_service.py  job_pipeline.py  kwork_browser.py  proposal_sender.py  reward_system.py
app/tasks/: scrape_tasks.py
app/telegram/: bot.py  keyboards.py
app/utils/: formatting.py  proxy.py
docker/: entrypoint.sh
scripts/: export_kwork_session.py  init_db.py  regenerate_unsent_proposals.py  resend_proposals.py  test_ollama.py
