[project]
name = "jobpilot-ai"
version = "0.1.0"
description = "JobPilot AI — AI-powered freelance automation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "qdrant-client>=1.13.0,<1.14.0",
    "playwright>=1.49.0",
    "aiogram>=3.15.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "cursor-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
